--- a/Module3-solution/index2.html
+++ b/Module3-solution/index2.html
@@ -10,7 +10,7 @@
      <script src="js/bootstrap.min.js"></script>
      <script src="js/script.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="style101.css">
+    <link rel="stylesheet" href="css/style101.css">
   </head>
 <body>
    <header>
